# cue-drive

./: .gitignore  package-lock.json  package.json  start-dev.sh
.claude/: launch.json
.github/workflows/: release.yml
analyzer/: analyzer.py  build.sh  requirements.txt
docs/: CNAME  index.html  robots.txt  sitemap.xml
docs/download/: macos.html  windows.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: analyzer-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: commands.rs  metadata.rs  mod.rs  models.rs
src-tauri/src/db/: mod.rs  rekordbox.rs  traktor.rs
src-tauri/src/export/: commands.rs  mod.rs  organizer.rs
src/components/export/: ExportView.tsx
src/components/player/: AudioPlayer.tsx
src/components/setbuilder/: SetBuilderView.tsx
src/components/shared/: EnergyBadge.tsx  KeyBadge.tsx
src/components/updater/: UpdateBanner.tsx
src/demo/: seedData.ts
src/i18n/: translations.ts  useT.ts
src/store/: collections.ts  library.ts  persistence.ts  set.ts
src/types/: index.ts
src/utils/: camelot.ts
