[package]
name = "cue-drive"
version = "0.1.0"
description = "CueDrive — DJ USB Organizer"
authors = ["rodrantho <@rodrantho>"]
edition = "2021"

[lib]
name = "cue_drive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# tauri-plugin-shell = "2"  # replaced by direct tokio::process::Command
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
id3 = "1"
metaflac = "0.2"
mp4ameta = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
